Data creation script updated with code to create prices data by company over time.

--- a/Dataset Creation Notebooks/07 Combining Financial Data.ipynb
+++ b/Dataset Creation Notebooks/07 Combining Financial Data.ipynb
@@ -39,8 +39,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T09:58:14.938794Z",
-     "start_time": "2024-12-06T09:58:14.054442Z"
+     "end_time": "2024-12-11T09:17:50.082105Z",
+     "start_time": "2024-12-11T09:17:49.309015Z"
     }
    },
    "cell_type": "code",
@@ -71,8 +71,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-06T09:58:15.139051Z",
-     "start_time": "2024-12-06T09:58:14.946121Z"
+     "end_time": "2024-12-11T09:18:24.654043Z",
+     "start_time": "2024-12-11T09:18:24.463709Z"
     }
    },
    "cell_type": "code",
@@ -95,11 +95,11 @@
     "\n",
     "# load the company descriptions and industry classifications dataset\n",
     "\n",
-    "company_info = pd.read_csv('data/Datasets/company_profile_cleaned_50B.csv')"
+    "company_info = pd.read_csv('../Data/Datasets/company_profile_cleaned_50B.csv')"
    ],
    "id": "376fbbc021fa0d3a",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "metadata": {},
