Created Updated Finance data with combined earnings, price and finance data.

--- a/Model_setup.ipynb
+++ b/Model_setup.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "I will be building datasets for the following categories:\n",
     "\n",
-    "- [ ] Price Data {Q} : Daily Prices (get Earnings Annoucments dates from FMP and prices for day, week and month after from another source where prices are available __[requires two steps]__)\n",
+    "- [X ] Price Data {Q} : Daily Prices (get Earnings Annoucments dates from FMP and prices for day, week and month after from another source where prices are available __[requires two steps]__)\n",
     "- [X] Financial Statement Data {F} : Quarterly Statments and Earnings\n",
     "- [X] Earnings Data {F} : Earnings per share currrent and forecast (quarterly or trailing 12months)\n",
     "- [X] Company Specific Information {F} : Information describing the Company\n",
@@ -45,7 +45,7 @@
     "\n",
     "Data Parameters:\n",
     "\n",
-    "- Time Frame: 5 years\n",
+    "- Time Frame: 10 years\n",
     "- Frequency: Daily and Quarterly\n",
     "- Separate Tables for each of above categories\n",
     "\n"
@@ -93,6 +93,8 @@
     "- Time Series Plots\n",
     "- Scatter Plots\n",
     "- Box Plots\n",
+    "\n",
+    "Specifically, I will look to translate the timeseries data into a signal that can be used to predict the P/E ratio of stocks. The signal should help me determine if the data is non-stationary or stationary and what transformations are needed to make it stationary.\n",
     "\n",
     "The above will be done for each of the models. And the main aim is to understand the relationships between the variables and the target variable to see whether statistical relationships exist and are normally distributed.\n"
    ],
@@ -152,7 +154,7 @@
     "- Gradient Boosting\n",
     "- AdaBoost\n",
     "\n",
-    "I would like to also test designing models using Neural Networks and Support Vector Machines.\n",
+    "I would like to also test designing models using Neural Networks.\n",
     "\n",
     "The model will be evaluated to see how well they predict the P/E ratio of stocks.\n",
     "\n",
