Wokring through the first round of data visualization and exploration.

--- a/Dataset Creation Notebooks/02 Creating Financial Data [Statments Key Metrics].ipynb
+++ b/Dataset Creation Notebooks/02 Creating Financial Data [Statments Key Metrics].ipynb
@@ -66,9 +66,7 @@
     "\n",
     "filepath='data/Datasets/company_profile_cleaned_50B.csv'\n",
     "\n",
-    "company_profile_data = pd.read_csv(filepath)\n",
-    "\n",
-    "\n"
+    "company_profile_data = pd.read_csv(filepath)\n"
    ],
    "id": "a1719bbb2a2828a3",
    "outputs": [],
